<resources>
    <string name="app_name">PathTracker</string>
    <string name="title_activity_map">Map</string>

    <string name="error_saving_to_db">Error when saving to database, try again. Maybe, path with this name already exists?</string>
    <string name="error_updating_db">Error when updating database, try again. Maybe, path with this name already exists?</string>
    <string name="error_deleting_from_db">Error when deleting from database</string>
    <string name="fail_list_is_empty">List of points is empty</string>
    <string name="fail_saving_add">Failed save to database</string>
    <string name="fail_path_is_null">Fail - path is not exists</string>
    <string name="error_no_path_info">Error saving to database - no info about current path</string>
    <!--fragment_dialogs-->
    <string name="type_path_name">Type name of path</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="path_name_hint">Path-</string>

    <string name="dialog_enable_GPS">You should enable GPS for path tracking</string>
    <string name="dialog_is_really_clear">Do you really want to clear current path?</string>
    <string name="dialog_error_get_permission">Can\'t get permission to access location</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <!--fragment_control -->
    <string name="button_start_service">Start</string>
    <string name="button_stop_service">Stop</string>
    <string name="button_save">Save</string>
    <string name="button_show_current">Show current</string>
    <string name="button_clear">Clear</string>

    <!--fragment_navigation_drawer -->
    <string name="list_is_empty">Empty list</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="context_menu_delete_item">Delete path</string>
    <string name="context_menu_rename_item">Rename path</string>
    <string name="error_delete_path">Failed to delete path</string>
    <string name="navigation_drawer_toolbar">Saved paths</string>

    <string name="desc_control_service">Switching service work.</string>
    <string name="desc_save_button">Save path to database.</string>
    <string name="desc_path_info">Shows info about current path.</string>
    <string name="desc_show_current">Show path that current tracking.</string>
    <string name="desc_clear_path">Clear current path.</string>
    <string name="info_avg_speed">Average speed:</string>
    <string name="info_cur_speed">Current speed:</string>
    <string name="info_dist">Distance:</string>
    <string name="info_time">Time:</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="map_settings">Map settings</string>
    <string name="list_settings">List settings</string>
    <string name="menu_settings">Settings</string>
    <string name="units_settings">Units</string>

    <string name="pref_key_map_settings">pref_key_map_settings</string>
    <string name="pref_key_map_type">pref_key_map_type</string>
    <string name="pref_map_type">Map type</string>
    <string name="pref_map_type_dialog">Choose map view:</string>
    <string name="pref_key_map_type_def">Normal</string>
    <string name="pref_key_map_type_def_result">1</string>
    <string name="pref_key_measure_interval">pref_key_measure_interval</string>
    <string name="pref_measure_interval">Measure interval</string>
    <string name="pref_measure_interval_dialog">Choose new interval:</string>
    <string name="pref_key_measure_interval_def">10</string>
    <string name="pref_key_list_starttime">pref_key_list_settings</string>
    <string name="pref_key_list_endtime">pref_key_list_end_time</string>
    <string name="pref_key_list_velocity">pref_key_list_velocity</string>
    <string name="pref_key_list_distance">pref_key_list_distance</string>
    <string name="pref_list_starttime">Show start time</string>
    <string name="pref_list_endtime">Show end time</string>
    <string name="pref_list_distance">Show distance</string>
    <string name="pref_list_velocity">Show velocity</string>
    <string name="pref_key_units">pref_key_units</string>
    <string name="pref_key_units_distance">pref_key_unit_distance</string>
    <string name="pref_key_units_speed">pref_key_unit_speed</string>
    <string name="pref_units_distance">Distance</string>
    <string name="pref_units_speed">Speed</string>
    <string name="pref_units_distance_dialog">Distance units:</string>
    <string name="pref_units_speed_dialog">Speed units:</string>
    <string name="pref_key_units_distance_default">Kilometres</string>
    <string name="pref_key_units_speed_default">per hour</string>
    <string name="unit_kilometre_suffix">km</string>
    <string name="unit_mile_suffix">mi</string>
    <string name="unit_metre_suffix">m</string>
    <string name="unit_nautical_mile_suffix">nm</string>
    <string name="unit_hour_suffix">h</string>
    <string name="unit_minute_suffix">m</string>
    <string name="unit_second_suffix">s</string>
    <string name="menu_delete_selected">Delete selected</string>
    <string name="search_hint">Type path name</string>


    <string-array name="array_distance_units">
        <item>Kilometres</item>
        <item>Miles</item>
        <item>Metres</item>
        <item>Nautical miles</item>
    </string-array>

    <string-array name="array_speed_units">
        <item>per hour</item>
        <item>per minute</item>
        <item>per second</item>
    </string-array>

    <string-array name="array_map_types">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

    <string-array name="array_map_types_results">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string-array name="array_measure_interval">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string name="title_activity_search_path">SearchPathActivity</string>

</resources>
