<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    card_view:cardBackgroundColor="@color/app_color_lt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ru.sukharev.pathtracker.ui.InfoFragment"
        android:orientation="vertical">
    <DigitalClock
        android:id="@+id/info_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
        <TextView
            android:id="@+id/info_timer_help"
            android:text="@string/info_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_dist_help"
            android:text="@string/info_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_cur_speed_help"
            android:text="@string/info_cur_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_cur_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_avg_speed_help"
            android:text="@string/info_avg_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/info_avg_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.v7.widget.CardView
    >


